# GenAI-Project---Multi-Agent-Medical

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
clinical_assistant/agents_module/: README.md
clinical_assistant/agents_module/agent_from_scratch/: 1_llms.py  2_tool_calling.py  3_retrieval.py  4_long_term_memory.py  5_short_term_memory.py  6_agent.py  README.md
clinical_assistant/agents_module/agent_from_scratch/knowledgebase/: faq.json  products.json
clinical_assistant/agents_module/agent_with_mcp/: 1_mcp_client_demo.py  README.md  main.py  mcp_config.json
clinical_assistant/agents_module/agent_with_mcp/crm_db/: crm.json
clinical_assistant/agents_module/agent_with_mcp/tools/: memory_mcp.py  retrieval_mcp.py  tools.py
clinical_assistant/langgraph_module/: README.md
clinical_assistant/langgraph_module/effective_agents/: README.md
clinical_assistant/langgraph_module/effective_agents/agents/: 8_agent.py
clinical_assistant/langgraph_module/effective_agents/building_blocks/: 1_llm.py  2_augmented_llm.py
clinical_assistant/langgraph_module/effective_agents/workflows/: 4_routing.py  (+4 more)
clinical_assistant/langgraph_module/frontends/: README.md
clinical_assistant/langgraph_module/langgraph_server/: README.md  langgraph.json
clinical_assistant/langgraph_module/multi_agent/: README.md
dataset/MedQA/: README.md
scripts/: medqa_eval.py  symptom2d_eval.py  unified_eval.py
scripts/outputs/: medqa_US_test.jsonl  medqa_baseline.metrics.json  medqa_multiagent.metrics.json  symptom_baseline.metrics.json  symptom_multiagent.metrics.json
(+21 files in other folders)
